➕ADD : Se agrega sección Texto bienvenida
Se crea la sección bienvenida a la cual se le aplican sus respectivos estilos y ademas un boton para enlazar la seccion contactame.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <body>
     <!-- Cuerpo del proyecto -->
     <section class="bienvenida">
-      <header class="encabezado">
-        <div class="container">
-          <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container">
+        <header class="encabezado">
+          <nav class="navbar navbar-light fixed-top blur">
             <a class="navbar-brand" href="#!">Edfer Games</a>
             <button
               class="navbar-toggler navbar-toggler-right"
@@ -42,9 +42,7 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#!"
-                    >Nosotros<span class="sr-only">(current)</span></a
-                  >
+                  <a class="nav-link" href="#!">Nosotros</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#!">Servicios</a>
@@ -58,10 +56,16 @@
               </ul>
             </div>
           </nav>
+        </header>
+
+        <div class="texto-bienvenido text-center">
+          <p class="h5" >Hola que tal, Bienvenidos</p>
+          <h1 class="display-4 mb-3">ES UN GUSTO QUE ESTES POR AQUÍ</h1>
+          <a class="btn btn-primary btn-lg" href="">Contactame</a>
         </div>
-      </header>
+      </div>
     </section>
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <!-- jQuery and Bootstrap Js -->
     <script src="./js/jquery.slim.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
   </body>
