➕ADD : Se agrega la sección quienes somos

--- a/index.html
+++ b/index.html
@@ -59,11 +59,36 @@
         </header>
 
         <div class="texto-bienvenido text-center">
-          <p class="h5" >Hola que tal, Bienvenidos</p>
+          <p class="h5">Hola que tal, Bienvenidos</p>
           <h1 class="display-4 mb-3">ES UN GUSTO QUE ESTES POR AQUÍ</h1>
           <a class="btn btn-primary btn-lg" href="">Contactame</a>
         </div>
       </div>
+    </section>
+    <section class="quienes-somos py-4 text-center">
+      <div class="container">
+        <img
+          src="./images/gamer.svg"
+          alt="Trabajando en casa"
+          class="img-fluid mx-auto d-block mb-4"
+          width="200px"
+        />
+        <h2 class="h3">¿Quienes somos?</h2>
+        <p>
+          Contenido gamer variado, pasa un rato agradable y ayúdame a subir de
+          nivel en cada reto planteado, agradezco tus comentarios y tu apoyo.
+          Bienvenid@s a pasarla bien es que se dijo!
+        </p>
+
+          <a
+            href=""
+            class="btn btn-light btn-lg"
+            data-toggle="modal"
+            data-target="#quienes-somos"
+            ><i class="fas fa-info-circle"></i> Mas Información</a
+          >
+        </div>
+      
     </section>
     <!-- jQuery and Bootstrap Js -->
     <script src="./js/jquery.slim.min.js"></script>
